added poatgresql image via docker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,17 @@
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:test
+#H2 database
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:test
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+
+#PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5431/jobapp
+spring.datasource.username=db
+spring.datasource.password=123
+spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 #Actuator
 management.endpoints.web.exposure.include=*
